2002-05-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/gnumeric-general.schemas : add 3 printer schemax
	* src/gnumeric-gconf-priv.h : add printer keys
	* src/gnumeric-gconf.c : add printer get/set methods
	* src/gnumeric-gconf.h : ditto
	* src/print.c (print_job_info_set_one_time_defaults) : new
	(print_job_info_save_one_time_defaults) : new
	(print_job_info_get) : call print_job_info_set_one_time_defaults
	(sheet_print) : call print_job_info_save_one_time_defaults

2002-05-08  Jon K Hellan  <hellan@acm.org>

	* src/gui-util.c (gnumeric_dialog_run): Silence warnings.

2002-05-08  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-gui.c, src/workbook-control-gui-priv.h
	(wbcg_scroll_wheel_support_cb): Rename from
	cb_scroll_wheel_support and export protected.

	* src/workbook-control-component.c: Add more missing includes:
	commands.h, selection.h, sheet-control-gui.h, workbook-edit.h.
	(wbcc_validation_msg): Return a dummy 0 to satisfy prototype.
	(workbook_control_component_init): Remve unused drag_types
	variable. Add signal handler for mouse wheel scrolling.

2002-05-08  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control-component.c: Include "dialogs.h" to get
	prototype for dialog_search.

	* src/bonobo-io.c (cleanup_stream): Return status.

2002-05-08  Jon K Hellan  <hellan@acm.org>

	* src/workbook-control.[ch], src/workbook-control-priv.h
	(wb_control_edit_set_sensitive): New virtual, replacing
	workbook_edit_set_sensitive in workbook-edit. Made parameter names
	descriptive because it's now used far away from where it is
	defined.

	* src/workbook-control-component.c (wbcc_edit_set_sensitive): Null
	implementation of new virtual.
	(workbook_control_component_init): Construct, but don't show, the
	edit area, to avoid warnings when range selecting.
	(workbook_control_component_ctor_class): Register
	edit_set_sensitive implementation.

	* src/workbook-control-gui.[ch] (wbcg_toolbar_timer_clear): Moved